--- a/Java/Spring/Data II/dojosyninjas/src/main/resources/application.properties
+++ b/Java/Spring/Data II/dojosyninjas/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#JSP CONFIG
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+spring.mvc.hiddenmethod.filter.enabled=true
 
+#DataBase Conection
+spring.datasource.url=jdbc:mysql://localhost:3306/*Nombre ded la base de datos*
+spring.datasource.username=user
+spring.datasource.password=contra
+spring.jpa.hibernate.ddl-auto=update
