--- a/Java/Spring/Data II/dojosyninjas/src/main/resources/application.properties
+++ b/Java/Spring/Data II/dojosyninjas/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.hiddenmethod.filter.enabled=true
 
 #DataBase Conection
-spring.datasource.url=jdbc:mysql://localhost:3306/*Nombre ded la base de datos*
-spring.datasource.username=user
-spring.datasource.password=contra
+spring.datasource.url=jdbc:mysql://localhost:3306/dojos-ninjas
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
